fix title text overflow problem. https://app.asana.com/0/77471202261980/81693220068453

--- a/client/stylesheets/globals/list-items.import.less
+++ b/client/stylesheets/globals/list-items.import.less
@@ -4,7 +4,7 @@
   // Layout of list-item children
   .display(flex);
   .flex-wrap(wrap);
-  height: 3rem;
+  // height: 3rem;
   width: 100%;
 
   .checkbox {
@@ -15,7 +15,7 @@
   .textItem {
     .flex(1);
     padding: .75rem 1em; //total height ~48
-    line-height: 1.5rem !important;
+    // line-height: 1.5rem !important;
 
     a {
       color: #424242;
